# rootlink

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Cargo.toml  DEVELOPMENT.md  LICENSE  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  build.sh  install-local.sh
resources/: config.default.json
resources/applications/: rootlink.desktop
src/qml/: main.cpp  main.qml  qml.qrc
src/qml/components/: ColumnView.qml  ContextMenu.qml  FileGrid.qml  FileListView.qml  PathBar.qml  PreferenceTabButton.qml  PreviewPanel.qml  SearchBar.qml  Sidebar.qml  SidebarItem.qml  StatusBar.qml  TabBar.qml  Toolbar.qml  qmldir
src/qml/pages/: FileBrowser.qml  Preferences.qml  QuickLook.qml
src/qml/theme/: Colors.qml  Spacing.qml  Theme.qml  Typography.qml  qmldir
src/rust/: errors.rs  filesystem.rs  filewatcher.rs  main.rs  qml_bridge.rs  search.rs  theme.rs  thumbnails.rs
