[package]
name = "rootlink"
version = "1.0.0"
edition = "2021"
description = "Modern desktop file manager for Linux Wayland systems"
license = "MIT"

[[bin]]
name = "rootlink"
path = "src/rust/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
async-trait = "0.1"
walkdir = "2"
crossbeam = "0.8"
dashmap = "5.5"
lru = "0.12"
notify = "6"
regex = "1"
mime = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
num_cpus = "1.16"
dirs = "5"
tempfile = "3"

# Wayland support
wayland-client = "0.30"
wayland-protocols = "0.30"

# Database for indexed search
rusqlite = { version = "0.29", features = ["bundled"] }

# Image processing
image = "0.24"
imageproc = "0.24"

# Document parsing
pdf = "0.10"
syntect = "5"

# Async file operations
tokio-util = "0.7"
bytes = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
split-debuginfo = "packed"
